syntax = "proto3";

package com.example.ams;

import "google/protobuf/empty.proto";
//package com.example.ams.entities;
option java_multiple_files =  true;

message AdminDetails{
  int32 admin_id = 1;
  string username = 2;
  string password = 3;
}


service AdminService {
  rpc registerAdmin(AdminDetails) returns (AdminDetails);
  rpc getAllAdmins(google.protobuf.Empty) returns (AdminList);
  rpc getAdminById(GetAdminByIdRequest) returns (AdminDetails);
  rpc updateAdmin(UpdateAdminRequest) returns (AdminDetails);
  rpc deleteAdmin(DeleteAdminRequest) returns (google.protobuf.Empty);
}

message GetAdminByIdRequest {
  int32 admin_id = 1;
}

message UpdateAdminRequest {
  int32 admin_id = 1;
  AdminDetails admin_details = 2;
}

message DeleteAdminRequest {
  int32 admin_id = 1;
}

message AdminList {
  repeated AdminDetails admins = 1;
//  repeated int32 adminId = 1;
//  repeated string userName = 2;
//  repeated string password = 3;
}
